syntax = "proto3";
package storage;

message FileUploadedEventData {
  string file_name = 1;
  string file_key = 2;
}

message FilesDeletedEventData {
  repeated string file_keys = 1;
}
